--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <nav class="menuMo">
         <h1>
-          <a href="#">DCODELAB</a>
+          <a href="#">Interior</a>
           <span>UI/UX DEVELPMENT INSTUTUTE</span>
         </h1>
         <ul id="gnbMo">
@@ -76,12 +76,12 @@
         <h1>ABOUT US</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis quisquam fugit maiores, sed
           architectoLLorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis quisquam fugit maiores, sed
-          architectooremet cdipisicing elit. Perferendis quisq cdipisicing elit. Perferendis quisquam fugit maiores, sed
-          architectooremet consectecte cdipisicing elit. Perferendis quisquam fugit maiores, sed
-          architectooremet consectetur, adipisicing elit. Perferendis quisquam fugit maiores,
+          architectooremet cdipisicing elit. Perferendis quisq cdipisicing elit. Perferendis quisquam
+          sedcing elit. Perferendis quisquam fugit maiores,
           sed
           architectolor sit amet consectetur, adipisicing elit. Perferendis quisquam fugit maiores, sed architecto
           sequi officia iusto expedita cum </p>
+        <a href="#">MORE</a>
       </div>
       <div class="QiuckJoin">
         <form action="index.html">
@@ -118,12 +118,6 @@
                   </select> -->
                 </td>
               </tr>
-
-              <div class="agreement">
-                <input type="checkbox" name="agree" id="agree">
-                <label for="agree">약관에 동의합니다</label>
-              </div>
-
               <tr>
                 <th colspan="2">
                   <input type="submit" value="SUBMIT">
@@ -131,6 +125,10 @@
               </tr>
             </table>
           </fieldset>
+          <div class="agreement">
+            <input type="checkbox" name="agree" id="agree">
+            <label for="agree">약관에 동의합니다</label>
+          </div>
         </form>
       </div>
     </div>
