12/9 6시까지 한거 제출

--- a/index.html
+++ b/index.html
@@ -75,10 +75,8 @@
       <div class="wrap">
         <h1>ABOUT US</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis quisquam fugit maiores, sed
-          architectoLLorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis quisquam fugit maiores, sed
-          architectooremet cdipisicing elit. Perferendis quisq cdipisicing elit. Perferendis quisquam
-          sedcing elit. Perferendis quisquam fugit maiores,
-          sed
+          architectoLLorem ipsum dolor sit amet consectetur, adipisicing elit. Perferend
+          architectolor sit amet consectetur, adipisicing
           architectolor sit amet consectetur, adipisicing elit. Perferendis quisquam fugit maiores, sed architecto
           sequi officia iusto expedita cum </p>
         <a href="#">MORE</a>
@@ -118,14 +116,16 @@
                   </select> -->
                 </td>
               </tr>
-
+              <!-- 
               <div class="agreement">
                 <input type="checkbox" name="agree" id="agree">
                 <label for="agree">약관에 동의합니다</label>
-              </div>
+              </div> -->
 
               <tr>
                 <th colspan="2">
+                  <input type="checkbox" name="agree" id="agree">
+                  <label for="agree">약관에 동의합니다</label>
                   <input type="submit" value="SUBMIT">
                 </th>
               </tr>
