12/11일 전체적으로 변경

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <header id="header">
     <div class="inner">
       <!-- 웹페이지 메뉴 -->
+      <div class="hd_logo"><img src="img/logo.png" alt="헤더로고"></div>
       <nav class="menuWeb">
         <ul id="gnb">
           <li><a href="index.html">HOME</a></li>
@@ -52,25 +53,29 @@
 
   <figure id="visual">
     <article class="slider">
+      <div class="inner">
+        <h1>A BUILDER YOU CAN TRUST</h1>
+      </div>
       <ul>
         <li data-index="1"></li>
         <li data-index="2"></li>
         <li data-index="3"></li>
       </ul>
     </article>
-    <a href="#" class="prev">
-      <strong>prev</strong>
-    </a>
-    <a href="#" class="next">
-      <strong>next</strong>
-    </a>
-    <div class="inner">
-      <h1>A BUILDER YOU CAN TRUST</h1>
+
+    <div class="Slide_btn">
+      <a href="#" class="prev">
+        <strong>prev</strong>
+      </a>
+      <a href="#" class="next">
+        <strong>next</strong>
+      </a>
     </div>
+
   </figure>
 
   <!-- 짧은 액션폼부여 -->
-  <section id="information">
+  <section id="information" class="action">
     <div class="inner">
       <div class="wrap">
         <h1>ABOUT US</h1>
@@ -140,122 +145,133 @@
   <section id="services">
     <div class="inner">
       <h1>OUR SERVICES</h1>
-      <main>
-        <div>
-          <ul>
-            <li class="on"><a href="#">Living-room</a></li>
-            <li><a href="#">Kitchen</a></li>
-            <li><a href="#">Bed-Room</a></li>
-            <li><a href="#">Nursery-Room</a></li>
-            <li><a href="#">Bathroom</a></li>
-            <li><a href="#">Front door</a></li>
-          </ul>
-        </div>
-
-        <section>
-          <article class="on">
-            <div class="pic">
-              <img src="img/거실.png" alt="거실인테리어사진">
-            </div>
-            <div class="wrap">
-              <h2>Living-room</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
-                ipsa
-                excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnistiis! Consequuntur voluptatum omnis
-                culpa dolorem laboriosam molestiae
-                excepum omnis culpa dolorem laboriosam molestiae
-                excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
-                neque non optio eligendi?
-              </p>
-            </div>
-          </article>
-
-          <article>
-            <div class="pic">
-              <img src="img/주방.jpg" alt="주방인테리어사진">
-            </div>
-
-            <div class="wrap">
-              <h2>Kitchen</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
-                ipsa
-                excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnistiis! Consequuntur voluptatum omnis
-                culpa dolorem laboriosam molestiae
-                excepum omnis culpa dolorem laboriosam molestiae
-                excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
-                neque non optio eligendi?
-              </p>
-            </div>
-          </article>
-
-          <article>
-            <div class="pic">
-              <img src="img/침실.jpg" alt="침실인테리어사진">
-            </div>
-            <div class="wrap">
-              <h2>Bed-Room</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
-                ipsa
-                excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam
-                molestiae
-                neque non optio eligendi?
-              </p>
-            </div>
-          </article>
-
-          <article>
-            <div class="pic">
-              <img src="img/아이방.jpg" alt="아이방인테리어사진">
-            </div>
-            <div class="wrap">
-              <h2>Nursery-Room</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
-                ipsaatibus at ducimus
-                ipsaLorem ipsum dolor sit amet consectetur adipisicin
-                excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
-                neque non optio eligendi?
-              </p>
-            </div>
-          </article>
-
-          <article>
-            <div class="pic">
-              <img src="img/욕실.jpg" alt="욕실인테리어사진">
-            </div>
-            <div class="wrap">
-              <h2>Bathroom</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus atatibus at
-                ducimus
-                ipsaLorem ipsum dolor sit amet consectetur adipisicinatibus at ducimus
-                ipsaLorem ipsum dolor sit amet consectetur adipisicin ducimus
-                ipsa
-                excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
-                neque non optio eligendi?
-              </p>
-            </div>
-          </article>
-
-          <article>
-            <div class="pic">
-              <img src="img/현관.jpg" alt="현관인테리어사진">
-            </div>
-            <div class="wrap">
-              <h2>Front door</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
-                ipsaLorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
-                ipsaLorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at
-              </p>
-            </div>
-          </article>
-        </section>
-      </main>
     </div>
+    <main>
+      <div class="inner">
+        <ul>
+          <li class="on"><a href="#">Living-room</a></li>
+          <li><a href="#">Kitchen</a></li>
+          <li><a href="#">Bed-Room</a></li>
+          <li><a href="#">Nursery-Room</a></li>
+          <li><a href="#">Bathroom</a></li>
+          <li><a href="#">Front door</a></li>
+        </ul>
+      </div>
+
+      <section>
+        <article class="on">
+          <div class="pic">
+            <img src="img/거실.png" alt="거실인테리어사진">
+          </div>
+          <div class="wrap">
+            <h2>Living-room</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
+              ipsa
+              excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnistiis! Consequuntur voluptatum omnis
+              culpa dolorem laboriosam molestiae
+              excepum omnis culpa dolorem laboriosam molestiae
+              excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
+              neque non optio eligendi?
+            </p>
+            <a href="#"> VIEW MORE</a>
+          </div>
+        </article>
+
+        <article>
+          <div class="pic">
+            <img src="img/주방.jpg" alt="주방인테리어사진">
+          </div>
+
+          <div class="wrap">
+            <h2>Kitchen</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
+              ipsa
+              excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnistiis! Consequuntur voluptatum omnis
+              culpa dolorem laboriosam molestiae
+              excepum omnis culpa dolorem laboriosam molestiae
+              excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
+              neque non optio eligendi?
+            </p>
+            <a href="#"> VIEW MORE</a>
+
+          </div>
+        </article>
+
+        <article>
+          <div class="pic">
+            <img src="img/침실.jpg" alt="침실인테리어사진">
+          </div>
+          <div class="wrap">
+            <h2>Bed-Room</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
+              ipsa
+              excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam
+              molestiae
+              neque non optio eligendi?
+            </p>
+            <a href="#"> VIEW MORE</a>
+
+          </div>
+        </article>
+
+        <article>
+          <div class="pic">
+            <img src="img/아이방.jpg" alt="아이방인테리어사진">
+          </div>
+          <div class="wrap">
+            <h2>Nursery-Room</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
+              ipsaatibus at ducimus
+              ipsaLorem ipsum dolor sit amet consectetur adipisicin
+              excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
+              neque non optio eligendi?
+            </p>
+            <a href="#"> VIEW MORE</a>
+
+          </div>
+        </article>
+
+        <article>
+          <div class="pic">
+            <img src="img/욕실.jpg" alt="욕실인테리어사진">
+          </div>
+          <div class="wrap">
+            <h2>Bathroom</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus atatibus at
+              ducimus
+              ipsaLorem ipsum dolor sit amet consectetur adipisicinatibus at ducimus
+              ipsaLorem ipsum dolor sit amet consectetur adipisicin ducimus
+              ipsa
+              excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
+              neque non optio eligendi?
+            </p>
+            <a href="#"> VIEW MORE</a>
+
+          </div>
+        </article>
+
+        <article>
+          <div class="pic">
+            <img src="img/현관.jpg" alt="현관인테리어사진">
+          </div>
+          <div class="wrap">
+            <h2>Front door</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
+              ipsaLorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
+              ipsaLorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at
+            </p>
+            <a href="#"> VIEW MORE</a>
+
+          </div>
+        </article>
+      </section>
+    </main>
   </section>
 
 
