12/12일 _ 스크롤연동했는데 마지막페이지 효과 주는  스크롤연동함.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
 </head>
 
 <body>
-  <header id="header">
+
+  <ul class="Scroll">
+    <li class="on"><span>HOME</span><a href="#"></a></li>
+    <li><span>SERVICES</span><a href="#"></a></li>
+    <li><span>PROJECTS</span><a href="#"></a></li>
+  </ul>
+
+  <header id="header" class="scroll_view on">
+
     <div class="inner">
       <!-- 웹페이지 메뉴 -->
       <div class="hd_logo"><img src="img/logo.png" alt="헤더로고"></div>
@@ -37,14 +45,14 @@
       <nav class="menuMo">
         <h1>
           <a href="#">Interior</a>
-          <span>UI/UX DEVELPMENT INSTUTUTE</span>
+          <span>INTERIOR INSTUTUTE</span>
         </h1>
         <ul id="gnbMo">
           <li><a href="#">DEPARTMENT</a></li>
-          <li><a href="#">YOUTUBE</a></li>
-          <li><a href="#">COMMUNITY</a></li>
+          <li><a href="#">JOIN</a></li>
           <li><a href="#">GALLERY</a></li>
-          <li><a href="#">LOCATION</a></li>
+          <li><a href="#">COMMUNITY</a></li>
+          <li><a href="#">CONTACT</a></li>
         </ul>
       </nav>
 
@@ -142,7 +150,7 @@
   </section>
 
   <!-- //탭기능부여 -->
-  <section id="services">
+  <section id="services" class="scroll_view on">
     <div class="inner">
       <h1>OUR SERVICES</h1>
     </div>
@@ -276,7 +284,7 @@
 
 
   <!-- 슬라이더_루프 부여 -->
-  <section id="LatestProjects">
+  <section id="LatestProjects" class="scroll_view on">
     <div class="inner">
       <h1>LATEST PROJECTS</h1>
       <div class="wrap">
@@ -323,6 +331,7 @@
       <p>Copyright &copy; 2022 DCODELAB ALL Right reserved</p>
     </div>
   </footer>
+
 
 
 </body>
