12/12일 _ 마지막페이지 연동완료

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   </section>
 
   <!-- //탭기능부여 -->
-  <section id="services" class="scroll_view on">
+  <section id="services" class="scroll_view">
     <div class="inner">
       <h1>OUR SERVICES</h1>
     </div>
@@ -284,7 +284,7 @@
 
 
   <!-- 슬라이더_루프 부여 -->
-  <section id="LatestProjects" class="scroll_view on">
+  <section id="LatestProjects" class="scroll_view">
     <div class="inner">
       <h1>LATEST PROJECTS</h1>
       <div class="wrap">
