--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       <nav class="menuWeb">
         <ul id="gnb">
           <li><a href="index.html">HOME</a></li>
-          <li><a href="#">DEPARTMENT</a></li>
-          <li><a href="#">JOIN</a></li>
-          <li><a href="#">GALLERY</a></li>
-          <li><a href="#">COMMUNITY</a></li>
-          <li><a href="#">CONTACT</a></li>
+          <li><a href="department.html">DEPARTMENT</a></li>
+          <li><a href="join.html">JOIN</a></li>
+          <li><a href="gallery.html">GALLERY</a></li>
+          <li><a href="community.html">COMMUNITY</a></li>
+          <li><a href="location.html">CONTACT</a></li>
         </ul>
       </nav>
 
@@ -48,11 +48,11 @@
           <span>INTERIOR INSTUTUTE</span>
         </h1>
         <ul id="gnbMo">
-          <li><a href="#">DEPARTMENT</a></li>
-          <li><a href="#">JOIN</a></li>
-          <li><a href="#">GALLERY</a></li>
-          <li><a href="#">COMMUNITY</a></li>
-          <li><a href="#">CONTACT</a></li>
+          <li><a href="department.html">DEPARTMENT</a></li>
+          <li><a href="join.html">JOIN</a></li>
+          <li><a href="gallery.html">GALLERY</a></li>
+          <li><a href="community.html">COMMUNITY</a></li>
+          <li><a href="location.html">CONTACT</a></li>
         </ul>
       </nav>
 
@@ -316,7 +316,7 @@
 
   <footer id="footer">
     <div class="inner">
-      <h1>Interior Remodeling</h1>
+      <h1><img src="img/logo.png" alt="푸터로고"></h1>
       <ul>
         <li><a href="#">POLICY</a></li>
         <li><a href="#">TERMS</a></li>
@@ -328,7 +328,7 @@
         address : Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, nesciunt!
         TEL : +82-032-333-4444 FAX : +82-032-333-4434
       </address>
-      <p>Copyright &copy; 2022 DCODELAB ALL Right reserved</p>
+      <p>Copyright &copy; 2022 SMK ALL Right reserved</p>
     </div>
   </footer>
 
