12/14 유튜브 및 커뮤니티 게시판 만듦

--- a/sub_page.html
+++ b/sub_page.html
@@ -9,9 +9,8 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/c12878d3ba.js" crossorigin="anonymous"></script>
   <script defer src="js/main.js"></script>
-  <!-- <script defer src="js/Slider.js"></script> -->
   <script defer src="js/anime.js"></script>
-  <!-- <script defer src="js/Tab.js/"></script> -->
+
 </head>
 
 <body>
@@ -27,6 +26,7 @@
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="community.html">COMMUNITY</a></li>
           <li><a href="location.html">CONTACT</a></li>
+          <li><a href="youtube.html">YOUTUBE</a></li>
         </ul>
       </nav>
 
@@ -45,6 +45,7 @@
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="community.html">COMMUNITY</a></li>
           <li><a href="location.html">CONTACT</a></li>
+          <li><a href="youtube.html">YOUTUBE</a></li>
         </ul>
       </nav>
 
