--- a/youtube.html
+++ b/youtube.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
   <meta charset="UTF-8">
@@ -8,10 +8,9 @@
   <title>기업형 인테리어 리모델링 </title>
   <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/c12878d3ba.js" crossorigin="anonymous"></script>
-  <script defer src="js/main.js"></script>
-  <!-- <script defer src="js/Slider.js"></script> -->
-  <script defer src="js/anime.js"></script>
-  <!-- <script defer src="js/Tab.js/"></script> -->
+  <!-- <script defer src="js/main.js"></script>
+  <script defer src="js/anime.js"></script> -->
+  <script defer src="js/youtube.js"></script>
 </head>
 
 <body>
@@ -30,6 +29,7 @@
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="community.html">COMMUNITY</a></li>
           <li><a href="location.html">CONTACT</a></li>
+          <li><a href="youtube.html">YOUTUBE</a></li>
         </ul>
       </nav>
 
@@ -48,6 +48,7 @@
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="community.html">COMMUNITY</a></li>
           <li><a href="location.html">CONTACT</a></li>
+          <li><a href="youtube.html">YOUTUBE</a></li>
         </ul>
       </nav>
 
@@ -56,8 +57,32 @@
 
   <section class="content youtube">
     <div class="inner">
-      <h1>Sub Title <span>서브페이지 제목</span></h1>
-      <!-- 컨텐츠가 들어가는 부분 -->
+      <h1>VIDEO PORTFOLIO <span>리모델링 시공사례</span></h1>
+      <div class="vidList">
+
+        <article>
+          div
+
+          <a href="" class="pic">
+            <img src="썸네일" alt="">
+          </a>
+
+          div
+          <div class="con">
+            <h2>타이틀</h2>
+            <p>설명</p>
+            <span>날짜</span>
+          </div>
+        </article>
+
+        <figure class="pop">
+          <span>X</span>
+        </figure>
+
+
+
+      </div>
+
     </div>
 
   </section>
