--- a/gallery.html
+++ b/gallery.html
@@ -30,6 +30,7 @@
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="community.html">COMMUNITY</a></li>
           <li><a href="location.html">CONTACT</a></li>
+          <li><a href="youtube.html">YOUTUBE</a></li>
         </ul>
       </nav>
 
@@ -48,6 +49,7 @@
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="community.html">COMMUNITY</a></li>
           <li><a href="location.html">CONTACT</a></li>
+          <li><a href="youtube.html">YOUTUBE</a></li>
         </ul>
       </nav>
 
