--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="community.html">COMMUNITY</a></li>
           <li><a href="location.html">CONTACT</a></li>
+          <li><a href="youtube.html">YOUTUBE</a></li>
         </ul>
       </nav>
 
@@ -53,6 +54,7 @@
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="community.html">COMMUNITY</a></li>
           <li><a href="location.html">CONTACT</a></li>
+          <li><a href="youtube.html">YOUTUBE</a></li>
         </ul>
       </nav>
 
