--- a/location.html
+++ b/location.html
@@ -31,6 +31,7 @@
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="community.html">COMMUNITY</a></li>
           <li><a href="location.html">CONTACT</a></li>
+          <li><a href="youtube.html">YOUTUBE</a></li>
         </ul>
       </nav>
 
@@ -49,6 +50,7 @@
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="community.html">COMMUNITY</a></li>
           <li><a href="location.html">CONTACT</a></li>
+          <li><a href="youtube.html">YOUTUBE</a></li>
         </ul>
       </nav>
 
