햄버거버튼이 서브페이지에서 안되는거 해결 및 서비스쪽에 이너 2개 중복되던거 h1쪽 이너 이름 수정함

--- a/community.html
+++ b/community.html
@@ -8,8 +8,7 @@
   <title>기업형 인테리어 리모델링 </title>
   <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/c12878d3ba.js" crossorigin="anonymous"></script>
-  <script defer src="js/main.js"></script>
-  <!-- <script defer src="js/Slider.js"></script> -->
+  <script defer src="js/btnCall.js"></script>
   <script defer src="js/anime.js"></script>
   <!-- <script defer src="js/Tab.js/"></script> -->
 </head>
