--- a/location.html
+++ b/location.html
@@ -10,7 +10,7 @@
   <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21202272a5ed6eaa68ebef47c85b882"></script>
   <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/c12878d3ba.js" crossorigin="anonymous"></script>
-  <script defer src="js/main.js"></script>
+  <script defer src="js/btnCall.js"></script>
   <script defer src="js/anime.js"></script>
   <script defer src="js/location.js"></script>
 </head>
