--- a/youtube.html
+++ b/youtube.html
@@ -11,6 +11,7 @@
   <!-- <script defer src="js/main.js"></script>
   <script defer src="js/anime.js"></script> -->
   <script defer src="js/youtube.js"></script>
+  <script defer src="js/btnCall.js"></script>
 </head>
 
 <body>
