--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/c12878d3ba.js" crossorigin="anonymous"></script>
   <script defer src="js/main.js"></script>
-  <!-- <script defer src="js/Slider.js"></script> -->
+  <script defer src="js/btnCall.js"></script>
   <script defer src="js/anime.js"></script>
   <!-- <script defer src="js/Tab.js/"></script> -->
 </head>
@@ -153,7 +153,7 @@
 
   <!-- //탭기능부여 -->
   <section id="services" class="scroll_view">
-    <div class="inner">
+    <div class="innerH1">
       <h1>OUR SERVICES</h1>
     </div>
     <main>
