--- a/join.html
+++ b/join.html
@@ -8,8 +8,7 @@
   <title>기업형 인테리어 리모델링 </title>
   <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/c12878d3ba.js" crossorigin="anonymous"></script>
-  <script defer src="js/main.js"></script>
-  <!-- <script defer src="js/Slider.js"></script> -->
+  <script defer src="js/btnCall.js"></script>
   <script defer src="js/anime.js"></script>
   <!-- <script defer src="js/Tab.js/"></script> -->
 </head>
