department 수정중 ( 카운트함수안됨) 멤버소개 진행중

--- a/department.html
+++ b/department.html
@@ -10,6 +10,7 @@
   <script src="https://kit.fontawesome.com/c12878d3ba.js" crossorigin="anonymous"></script>
   <script defer src="js/btnCall.js"></script>
   <script defer src="js/anime.js"></script>
+  <script defer src="js/counter.js"></script>
   <!-- <script defer src="js/Tab.js/"></script> -->
 </head>
 
@@ -56,11 +57,74 @@
   </header>
 
   <section class="content department">
-    <div class="inner">
-      <h1>Sub Title <span>서브페이지 제목</span></h1>
-      <!-- 컨텐츠가 들어가는 부분 -->
-    </div>
+    <div class="inner scroll_view">
+      <h1>ABOUT US <span>회사소개 및 구성원</span></h1>
+      <ul class="list">
+        <li>
+          <div><img src="img/projectconstruction-916776.png" alt="프로젝트달성"></div>
+          <b class="list_1">300</b>
+          <p>창립년도</p>
 
+        </li>
+        <li>
+          <div><img src="img/projectconstruction-916776.png" alt="매출액달성"></div>
+          <b class="list_2">300</b>
+          <p>직원 수</p>
+
+        </li>
+        <li>
+          <div><img src="img/projectconstruction-916776.png" alt="연간성장률"></div>
+          <b class="list_3">300</b>
+          <p>연간 성장률</p>
+        </li>
+        <li>
+          <div><img src="img/projectconstruction-916776.png" alt="특허등록"></div>
+          <b class="list_4">300</b>
+          <p>특허 등록</p>
+        </li>
+        <li>
+          <div><img src="img/projectconstruction-916776.png" alt="창립년도"></div>
+          <b class="list_5">300</b>
+          <p>프로젝트달성</p>
+        </li>
+        <li>
+          <div><img src="img/projectconstruction-916776.png" alt="직원수"></div>
+          <b class="list_6">300</b>
+          <p>매출액 달성</p>
+        </li>
+      </ul>
+
+      <div class="wrap scroll_view">
+        <article>
+          <div class="pic">
+            <img src="img/member6.jpg" alt="멤버1">
+          </div>
+          <h2><a href="#">MIKE</a></h2>
+          <p>제7회 uiux경연대회 최우수 디자이너</p>
+        </article>
+        <article>
+          <div class="pic">
+            <img src="img/member6.jpg" alt="멤버1">
+          </div>
+          <h2><a href="#">MIKE</a></h2>
+          <p>제7회 uiux경연대회 최우수 디자이너</p>
+        </article>
+        <article>
+          <div class="pic">
+            <img src="img/member6.jpg" alt="멤버1">
+          </div>
+          <h2><a href="#">MIKE</a></h2>
+          <p>제7회 uiux경연대회 최우수 디자이너</p>
+        </article>
+        <article>
+          <div class="pic">
+            <img src="img/member6.jpg" alt="멤버1">
+          </div>
+          <h2><a href="#">MIKE</a></h2>
+          <p>제7회 uiux경연대회 최우수 디자이너</p>
+        </article>
+      </div>
+    </div>
   </section>
 
 
