--- a/department.html
+++ b/department.html
@@ -59,6 +59,7 @@
   <section class="content department">
     <div class="inner scroll_view">
       <h1>ABOUT US <span>회사소개 및 구성원</span></h1>
+      <h2>OUR COMPANY</h2>
       <ul class="list">
         <li>
           <div><img src="img/projectconstruction-916776.png" alt="프로젝트달성"></div>
@@ -68,7 +69,7 @@
         </li>
         <li>
           <div><img src="img/projectconstruction-916776.png" alt="매출액달성"></div>
-          <b class="list_2">300</b>
+          <b class="list_2">1</b>
           <p>직원 수</p>
 
         </li>
@@ -79,7 +80,7 @@
         </li>
         <li>
           <div><img src="img/projectconstruction-916776.png" alt="특허등록"></div>
-          <b class="list_4">300</b>
+          <b class="list_4">1</b>
           <p>특허 등록</p>
         </li>
         <li>
@@ -95,32 +96,33 @@
       </ul>
 
       <div class="wrap scroll_view">
+        <h2>OUR MEMBERS</h2>
         <article>
           <div class="pic">
             <img src="img/member6.jpg" alt="멤버1">
           </div>
-          <h2><a href="#">MIKE</a></h2>
+          <h3><a href="#">MIKE</a></h3>
           <p>제7회 uiux경연대회 최우수 디자이너</p>
         </article>
         <article>
           <div class="pic">
             <img src="img/member6.jpg" alt="멤버1">
           </div>
-          <h2><a href="#">MIKE</a></h2>
+          <h3><a href="#">MIKE</a></h3>
           <p>제7회 uiux경연대회 최우수 디자이너</p>
         </article>
         <article>
           <div class="pic">
             <img src="img/member6.jpg" alt="멤버1">
           </div>
-          <h2><a href="#">MIKE</a></h2>
+          <h3><a href="#">MIKE</a></h3>
           <p>제7회 uiux경연대회 최우수 디자이너</p>
         </article>
         <article>
           <div class="pic">
             <img src="img/member6.jpg" alt="멤버1">
           </div>
-          <h2><a href="#">MIKE</a></h2>
+          <h3><a href="#">MIKE</a></h3>
           <p>제7회 uiux경연대회 최우수 디자이너</p>
         </article>
       </div>
