--- a/department.html
+++ b/department.html
@@ -63,34 +63,41 @@
       <ul class="list">
         <li>
           <div><img src="img/projectconstruction-916776.png" alt="프로젝트달성"></div>
-          <b class="list_1">300</b>
+          <span> <b class="list_1">300</b>년</span>
+
           <p>창립년도</p>
 
         </li>
+
         <li>
           <div><img src="img/projectconstruction-916776.png" alt="매출액달성"></div>
-          <b class="list_2">1</b>
+          <span> <b class="list_2">1</b>명</span>
+
           <p>직원 수</p>
 
         </li>
         <li>
           <div><img src="img/projectconstruction-916776.png" alt="연간성장률"></div>
-          <b class="list_3">300</b>
+          <span> <b class="list_3">300</b>%</span>
+
           <p>연간 성장률</p>
         </li>
         <li>
           <div><img src="img/projectconstruction-916776.png" alt="특허등록"></div>
-          <b class="list_4">1</b>
+          <span> <b class="list_4">1</b>개</span>
+
           <p>특허 등록</p>
         </li>
         <li>
           <div><img src="img/projectconstruction-916776.png" alt="창립년도"></div>
-          <b class="list_5">300</b>
+          <span> <b class="list_5">300</b>개</span>
+
           <p>프로젝트달성</p>
         </li>
         <li>
           <div><img src="img/projectconstruction-916776.png" alt="직원수"></div>
-          <b class="list_6">300</b>
+          <span> <b class="list_6">300</b>억</span>
+
           <p>매출액 달성</p>
         </li>
       </ul>
@@ -102,28 +109,28 @@
             <img src="img/member6.jpg" alt="멤버1">
           </div>
           <h3><a href="#">MIKE</a></h3>
-          <p>제7회 uiux경연대회 최우수 디자이너</p>
+          <p>부장</p>
         </article>
         <article>
           <div class="pic">
             <img src="img/member6.jpg" alt="멤버1">
           </div>
           <h3><a href="#">MIKE</a></h3>
-          <p>제7회 uiux경연대회 최우수 디자이너</p>
+          <p>차장</p>
         </article>
         <article>
           <div class="pic">
             <img src="img/member6.jpg" alt="멤버1">
           </div>
           <h3><a href="#">MIKE</a></h3>
-          <p>제7회 uiux경연대회 최우수 디자이너</p>
+          <p>과장</p>
         </article>
         <article>
           <div class="pic">
             <img src="img/member6.jpg" alt="멤버1">
           </div>
           <h3><a href="#">MIKE</a></h3>
-          <p>제7회 uiux경연대회 최우수 디자이너</p>
+          <p>대리</p>
         </article>
       </div>
     </div>
