멤버소개 바꾸기전 저장해놓기2..&조인 css완성

--- a/department.html
+++ b/department.html
@@ -105,32 +105,48 @@
       <div class="wrap scroll_view">
         <h2>OUR MEMBERS</h2>
         <article>
+          <div class="txt">
+            <h3>01</h3>
+            <h4><a href="#">MIKE</a></h4>
+            <p>부장</p>
+          </div>
           <div class="pic">
             <img src="img/member6.jpg" alt="멤버1">
           </div>
-          <h3><a href="#">MIKE</a></h3>
-          <p>부장</p>
+        </article>
+
+        <article>
+          <div class="txt">
+            <h3>02</h3>
+            <h4><a href="#">MIKE</a></h4>
+            <p>차장</p>
+          </div>
+          <div class="pic">
+            <img src="img/member6.jpg" alt="멤버1">
+          </div>
+
         </article>
         <article>
+          <div class="txt">
+            <h3>03</h3>
+            <h4><a href="#">MIKE</a></h4>
+            <p>과장</p>
+          </div>
           <div class="pic">
             <img src="img/member6.jpg" alt="멤버1">
           </div>
-          <h3><a href="#">MIKE</a></h3>
-          <p>차장</p>
         </article>
+
         <article>
+          <div class="txt">
+            <h3>04</h3>
+            <h4><a href="#">MIKE</a></h4>
+            <p>대리</p>
+          </div>
           <div class="pic">
             <img src="img/member6.jpg" alt="멤버1">
           </div>
-          <h3><a href="#">MIKE</a></h3>
-          <p>과장</p>
-        </article>
-        <article>
-          <div class="pic">
-            <img src="img/member6.jpg" alt="멤버1">
-          </div>
-          <h3><a href="#">MIKE</a></h3>
-          <p>대리</p>
+
         </article>
       </div>
     </div>
