--- a/join.html
+++ b/join.html
@@ -10,7 +10,7 @@
   <script src="https://kit.fontawesome.com/c12878d3ba.js" crossorigin="anonymous"></script>
   <script defer src="js/btnCall.js"></script>
   <script defer src="js/anime.js"></script>
-  <!-- <script defer src="js/Tab.js/"></script> -->
+  <script defer src="js/validation.js"></script>
 </head>
 
 <body>
@@ -55,11 +55,122 @@
     </div>
   </header>
 
-  <section class="content youtube">
+  <section class="content join">
 
     <div class="inner">
-      <h1>Sub Title <span>서브페이지 제목</span></h1>
-      <!-- 컨텐츠가 들어가는 부분 -->
+      <h1>MEMBERSHIP <span>회원가입</span></h1>
+      <div class="wrap">
+        <form action="result.html" method="get" id="member">
+          <fieldset>
+            <legend class="h">회원가입 폼 입력 양식 </legend>
+
+            <h2><label for="terms">MEMBER AGREEMENT</label></h2>
+            <textarea name="terms" id="terms" cols="30" rows="10">
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio velit a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dicta nostrum odio. Exercitationem debitis quis libero!Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio velit a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dicta nostrum odio. Exercitationem debitis quis liberoLorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio velit a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dicta nostrum odio. Exercitationem debitis quis libero!Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio velit a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dicta nostrum odio. Exercitationem debitis quis libero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio velit a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dicta nostrum odio. Exercitationem debitis quis libero!Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio velit a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dictt a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dicta nostrum odio. Exercitationem debitis quis libero!Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio velit a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dicta nostrum odio. Exercitationem debitis quis libero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio velit a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dicta nostrum odio. Exercitationem debitis quis libero!Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio velit a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dicta nostrum odio. Exercitationem debitis quis libero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio velit a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dicta nostrum odio. Exercitationem debitis quis libero!
+              </textarea>
+
+            <div class="agreement">
+              <input type="checkbox" name="agree" id="agree">
+
+              <label for="agree">약관에 동의합니다</label>
+
+            </div>
+
+            <h2>MEMBER INFORMATION</h2>
+            <table>
+              <caption class="h">회원가입을 위한 아이디, 비밀번호, 이메일,성별,학력,취미, 남기는 말 입력 테이블</caption>
+              <tbody>
+                <!-- userid   -->
+                <tr>
+
+                  <th scope="row"><label for="userid">User ID</label></th>
+                  <td>
+                    <input type="text" name="userid" id="userid" placeholder="아이디를 입력하세요.">
+                  </td>
+                </tr>
+                <!-- password -->
+                <tr>
+                  <th scope="row"><label for="pwd1">Password</label></th>
+                  <td>
+                    <input type="password" name="pwd1" id="pwd1" placeholder="비밀번호를 입력하세요.">
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row"><label for="pwd2">Re Password</label></th>
+                  <td>
+                    <input type="password" name="pwd2" id="pwd2" placeholder="비밀번호를 재입력하세요.">
+                  </td>
+                </tr>
+                <!-- email -->
+                <tr>
+                  <th scope="row"><label for="email">E-mail</label></th>
+                  <td>
+                    <input type="text" name="email" id="email" placeholder="이메일주소를 입력하세요.">
+                  </td>
+                </tr>
+                <!-- education -->
+                <tr>
+                  <th scope="row"><label for="edu">Education</label></th>
+                  <td>
+                    <select name="edu" id="edu">
+                      <option value="">선택하세요</option>
+                      <option value="elementary school">초등학교 졸업</option>
+                      <option value="middle school">중학교 졸업</option>
+                      <option value="high school">고등학교 졸업</option>
+                      <option value="college">대학교 졸업</option>
+                    </select>
+                  </td>
+                </tr>
+                <!-- gender -->
+                <tr>
+                  <th scope="row">Gender</th>
+                  <td>
+                    <label for="male">Male</label>
+                    <input type="radio" name="gender" id="male" value="male">
+                    <label for="female">Female</label>
+                    <input type="radio" name="gender" id="female" value="female">
+                  </td>
+                </tr>
+                <!-- interest -->
+                <tr>
+                  <th scope="row">Interests</th>
+                  <td>
+                    <label for="sports">Sports</label>
+                    <input type="checkbox" name="hobby" id="sports" value="sports">
+
+                    <label for="music">Music</label>
+                    <input type="checkbox" name="hobby" id="music" value="music">
+
+                    <label for="game">Game</label>
+                    <input type="checkbox" name="hobby" id="game" value="game">
+
+                    <label for="reading">Reading</label>
+                    <input type="checkbox" name="hobby" id="reading" value="reading">
+                  </td>
+                </tr>
+                <!-- comments -->
+
+                <tr>
+                  <th scope="row"><label for="comments">Comments</label></th>
+                  <td>
+                    <textarea name="comments" id="comments" placeholder="남기는 말을 입력하세요"></textarea>
+                  </td>
+                </tr>
+                <!-- btns -->
+                <tr>
+                  <th colspan="2">
+
+                    <input type="reset" value="cancel">
+                    <input type="submit" value="submit">
+                  </th>
+                </tr>
+              </tbody>
+
+            </table>
+          </fieldset>
+        </form>
+      </div>
+
     </div>
 
   </section>
