디파트먼트완성

--- a/department.html
+++ b/department.html
@@ -41,7 +41,7 @@
       <nav class="menuMo">
         <h1>
           <a href="#">Interior</a>
-          <span>INTERIOR INSTUTUTE</span>
+          <span>INTERIOR INSTITUTE</span>
         </h1>
         <ul id="gnbMo">
           <li><a href="department.html">DEPARTMENT</a></li>
@@ -106,9 +106,9 @@
         <h2>OUR MEMBERS</h2>
         <article>
           <div class="txt">
-            <h3>01</h3>
-            <h4><a href="#">MIKE</a></h4>
-            <p>부장</p>
+            <h3>부장</h3>
+            <p>NAME</p>
+
           </div>
           <div class="pic">
             <img src="img/member6.jpg" alt="멤버1">
@@ -117,9 +117,9 @@
 
         <article>
           <div class="txt">
-            <h3>02</h3>
-            <h4><a href="#">MIKE</a></h4>
-            <p>차장</p>
+            <h3>차장</h3>
+            <p>NAME</p>
+
           </div>
           <div class="pic">
             <img src="img/member6.jpg" alt="멤버1">
@@ -128,9 +128,9 @@
         </article>
         <article>
           <div class="txt">
-            <h3>03</h3>
-            <h4><a href="#">MIKE</a></h4>
-            <p>과장</p>
+            <h3>과장</h3>
+            <p>NAME</p>
+
           </div>
           <div class="pic">
             <img src="img/member6.jpg" alt="멤버1">
@@ -139,9 +139,9 @@
 
         <article>
           <div class="txt">
-            <h3>04</h3>
-            <h4><a href="#">MIKE</a></h4>
-            <p>대리</p>
+            <h3>대리</h3>
+            <p>NAME</p>
+
           </div>
           <div class="pic">
             <img src="img/member6.jpg" alt="멤버1">
@@ -161,12 +161,12 @@
       <ul>
         <li><a href="#">POLICY</a></li>
         <li><a href="#">TERMS</a></li>
-        <li><a href="#">CUSTOMMER</a></li>
+        <li><a href="#">CUSTOMER</a></li>
         <li><a href="#">CONTACT US</a></li>
       </ul>
 
       <address>
-        address : Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, nesciunt!
+        address : Lorem ipsum dolor sit
         TEL : +82-032-333-4444 FAX : +82-032-333-4434
       </address>
       <p>Copyright &copy; 2022 SMK ALL Right reserved</p>
